TaskPod/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-pod
  template:
    metadata:
      labels:
        app: task-pod
    spec:
      containers:
        - name: task-pod
          image: remioluwatomi/task-pod:1.1
