TaskPod/manifests/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: task-pod-svc

spec:
  type: NodePort

  selector:
    app: task-pod

  ports:
    - name: taskpod-http
      protocol: TCP
      port: 3456
      targetPort: 8004
      nodePort: 30081
