TaskPod/manifests/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: task-pod-ingress

spec:
  rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: task-pod-svc
              port:
                number: 3456
